--- a/src/index.html
+++ b/src/index.html
@@ -32,15 +32,57 @@
 		function init(data){
 			var seriesList = [{
 					'data' : data.Price.data,
-					'graphType' : 'line',
+					'graphType' : 'candlestick',
 					'tickerObject' : data.tickerObject,
 					'spos' : data.Price.spos,
-					'epos' : data.Price.epos
-					//'color': 'red',
+					'epos' : data.Price.epos,
+					'style' : {
+						'line':{
+							'stroke' : '#339bb6'
+						},
+						'area':{
+							'fill' : '#339bb6'
+						},
+						'ohlc' : {
+							'stroke' : '#339bb6'
+						},
+						'candlestick' : {
+							'above' : {
+								'rect' : {
+									'fill' : '#FFFFFF',
+									'stroke' : '#349834'
+								},
+								'path' : {
+									'stroke' : '#349834'
+								}
+							},
+							'below' : {
+								'rect' : {
+									'fill' : '#FF0000',
+									'stroke' : '#FF0000'
+								},
+								'path' : {
+									'stroke' : '#FF0000'
+								}
+							}
+						},
+						'abovebelow' : {
+							'above' : {
+								'fill' : '#92BC65',
+								'opacity' : '.8',
+								'stroke' : '#65A125'
+							},
+							'below' : {
+								'fill' : '#D86D72',
+								'opacity' : '.8',
+								'stroke' : '#CA3239'
+							}
+						}
+					}
 				}
 			];
 			var html = svggenerator($('.container'), {
-				width : 800,
+				width : 1200,
 				height : 600
 			}).init(seriesList);
 		};
